--- a/Beans_interface.ipynb
+++ b/Beans_interface.ipynb
@@ -43,6 +43,8 @@
     "        time.sleep(0.25)\n",
     "        touchphat.led_off(led)\n",
     "\n",
+    "pi.set_servo_pulsewidth(GPIO_PIN, stop_speed)        \n",
+    "        \n",
     "@touchphat.on_touch(\"Enter\")\n",
     "def start(event):\n",
     "    \n",
@@ -135,7 +137,7 @@
     "\n",
     "@touchphat.on_release(\"D\")\n",
     "def dose_D_release(event):\n",
-    "    touchphat.led_on(\"D\")"
+    "    touchphat.led_on(\"D\")\n"
    ]
   },
   {
@@ -289,128 +291,6 @@
     }
    ],
    "source": [
-    "import subprocess as sb\n",
-    "\n",
-    "\n",
-    "\n",
-    "import sys\n",
-    "import time\n",
-    "import random\n",
-    "import pigpio\n",
-    "import numpy as np\n",
-    "import touchphat\n",
-    "from pyacaia import AcaiaScale\n",
-    "\n",
-    "GPIO_PIN=15\n",
-    "ACAIA_MAC='00:1C:97:17:FD:97'\n",
-    "stop_speed=1490\n",
-    "target_weight=10\n",
-    "\n",
-    "sb.call('sudo pigpiod',shell=True)\n",
-    "\n",
-    "pi = pigpio.pi()\n",
-    "\n",
-    "#cycle the leds\n",
-    "for led in range(1,7):\n",
-    "        touchphat.led_on(led)\n",
-    "        time.sleep(0.25)\n",
-    "        touchphat.led_off(led)\n",
-    "\n",
-    "@touchphat.on_touch(\"Enter\")\n",
-    "def start(event):\n",
-    "    \n",
-    "    print (event.name, target_weight)\n",
-    "    global dispense\n",
-    "    dispense=True\n",
-    "    touchphat.led_on(\"Enter\")\n",
-    "   \n",
-    "\n",
-    "@touchphat.on_release(\"Enter\")\n",
-    "def start_release(event):\n",
-    "    print ('release start')\n",
-    "    touchphat.led_off(\"Enter\")     \n",
-    "    \n",
-    "@touchphat.on_touch(\"Back\")\n",
-    "def stop(event):\n",
-    "    print (event.name)\n",
-    "    \n",
-    "    global dispense\n",
-    "    global manual_mode\n",
-    "    \n",
-    "    dispense=False\n",
-    "    manual_mode=False\n",
-    "\n",
-    "@touchphat.on_release(\"Back\")\n",
-    "def stop_release(event):\n",
-    "    print ('release stop')\n",
-    "    touchphat.led_off(\"Back\")  \n",
-    "\n",
-    "\n",
-    "@touchphat.on_touch(\"A\")\n",
-    "def dose_A(event):\n",
-    "    print (event.name)\n",
-    "    global target_weight\n",
-    "    \n",
-    "    target_weight=10\n",
-    "    time.sleep(0.1)\n",
-    "    touchphat.led_on(\"A\")\n",
-    "    touchphat.led_off(\"B\")\n",
-    "    touchphat.led_off(\"C\")\n",
-    "    touchphat.led_off(\"D\")\n",
-    "\n",
-    "@touchphat.on_release(\"A\")\n",
-    "def dose_A_release(event):\n",
-    "    touchphat.led_on(\"A\")\n",
-    "\n",
-    "@touchphat.on_touch(\"B\")\n",
-    "def dose_B(event):\n",
-    "    print (event.name)\n",
-    "    global target_weight\n",
-    "    \n",
-    "    target_weight=20\n",
-    "    time.sleep(0.1)\n",
-    "    touchphat.led_on(\"B\")\n",
-    "    touchphat.led_off(\"A\")\n",
-    "    touchphat.led_off(\"C\")\n",
-    "    touchphat.led_off(\"D\")\n",
-    "\n",
-    "@touchphat.on_release(\"B\")\n",
-    "def dose_B_release(event):\n",
-    "    touchphat.led_on(\"B\")\n",
-    " \n",
-    "@touchphat.on_touch(\"C\")\n",
-    "def dose_C(event):\n",
-    "    print (event.name)\n",
-    "    \n",
-    "    global manual_mode\n",
-    "    manual_mode=True\n",
-    "    \n",
-    "    #target_weight=100\n",
-    "    time.sleep(0.1)\n",
-    "    touchphat.led_on(\"C\")\n",
-    "    touchphat.led_off(\"A\")\n",
-    "    touchphat.led_off(\"B\")\n",
-    "    touchphat.led_off(\"D\")\n",
-    "\n",
-    "@touchphat.on_release(\"C\")\n",
-    "def dose_C_release(event):\n",
-    "    touchphat.led_on(\"C\")\n",
-    "    \n",
-    "@touchphat.on_touch(\"D\")\n",
-    "def dose_D(event):\n",
-    "    print (event.name)\n",
-    "    touchphat.led_on(\"D\")\n",
-    "    touchphat.led_off(\"A\")\n",
-    "    touchphat.led_off(\"B\")\n",
-    "    touchphat.led_off(\"C\")\n",
-    "    time.sleep(0.1)\n",
-    "    sb.call('sudo shutdown -h now',shell=True)\n",
-    "\n",
-    "@touchphat.on_release(\"D\")\n",
-    "def dose_D_release(event):\n",
-    "    touchphat.led_on(\"D\")\n",
-    "\n",
-    "\n",
     "stop_speed=1490\n",
     "target_weight=10\n",
     "steps_per_direction=15\n",
@@ -445,12 +325,9 @@
     "                direction=direction*-1\n",
     "                n_steps=0\n",
     "            time.sleep(0.1)\n",
-    "        \n",
-    "        manual_mode=False\n",
-    "        dispense=False\n",
+    "\n",
     "        pi.set_servo_pulsewidth(GPIO_PIN, stop_speed)  \n",
-    "        \n",
-    "    \n",
+    "            \n",
     "    elif dispense: #here we use the scale\n",
     "        \n",
     "\n",
