--- a/Beans_interface.ipynb
+++ b/Beans_interface.ipynb
@@ -66,6 +66,9 @@
     "    global dispense\n",
     "    global manual_mode\n",
     "    \n",
+    "    time.sleep(0.1)\n",
+    "    touchphat.led_off(\"Back\")\n",
+    "    \n",
     "    dispense=False\n",
     "    manual_mode=False\n",
     "\n",
@@ -79,6 +82,8 @@
     "def dose_A(event):\n",
     "    print (event.name)\n",
     "    global target_weight\n",
+    "    global manual_mode\n",
+    "    manual_mode=False\n",
     "    \n",
     "    target_weight=10\n",
     "    time.sleep(0.1)\n",
@@ -95,6 +100,8 @@
     "def dose_B(event):\n",
     "    print (event.name)\n",
     "    global target_weight\n",
+    "    global manual_mode\n",
+    "    manual_mode=False\n",
     "    \n",
     "    target_weight=20\n",
     "    time.sleep(0.1)\n",
@@ -137,7 +144,7 @@
     "\n",
     "@touchphat.on_release(\"D\")\n",
     "def dose_D_release(event):\n",
-    "    touchphat.led_on(\"D\")\n"
+    "    touchphat.led_on(\"D\")"
    ]
   },
   {
