--- a/Beans_interface.ipynb
+++ b/Beans_interface.ipynb
@@ -47,17 +47,15 @@
     "        \n",
     "@touchphat.on_touch(\"Enter\")\n",
     "def start(event):\n",
-    "    \n",
     "    print (event.name, target_weight)\n",
     "    global dispense\n",
     "    dispense=True\n",
     "    touchphat.led_on(\"Enter\")\n",
-    "   \n",
     "\n",
     "@touchphat.on_release(\"Enter\")\n",
     "def start_release(event):\n",
     "    print ('release start')\n",
-    "    touchphat.led_off(\"Enter\")     \n",
+    "    touchphat.led_on(\"Enter\") \n",
     "    \n",
     "@touchphat.on_touch(\"Back\")\n",
     "def stop(event):\n",
@@ -317,6 +315,8 @@
     "    \n",
     "    if dispense and manual_mode: #this is helpful to unload the dispenser\n",
     "        \n",
+    "        touchphat.led_on(\"Enter\")\n",
+    "        \n",
     "        while manual_mode:\n",
     "            \n",
     "            n_steps+=1\n",
@@ -337,7 +337,8 @@
     "            \n",
     "    elif dispense: #here we use the scale\n",
     "        \n",
-    "\n",
+    "        touchphat.led_on(\"Enter\")\n",
+    "        \n",
     "        try:\n",
     "            scale=AcaiaScale(mac=ACAIA_MAC)\n",
     "            scale.connect()\n",
