--- a/Beans_interface.ipynb
+++ b/Beans_interface.ipynb
@@ -47,7 +47,7 @@
     "        \n",
     "@touchphat.on_touch(\"Enter\")\n",
     "def start(event):\n",
-    "    print (event.name, target_weight)\n",
+    "    print (event.name, target_weight, manual_mode)\n",
     "    global dispense\n",
     "    dispense=True\n",
     "    touchphat.led_on(\"Enter\")\n",
@@ -55,7 +55,7 @@
     "@touchphat.on_release(\"Enter\")\n",
     "def start_release(event):\n",
     "    print ('release start')\n",
-    "    touchphat.led_on(\"Enter\") \n",
+    "    touchphat.led_on(\"Enter\")     \n",
     "    \n",
     "@touchphat.on_touch(\"Back\")\n",
     "def stop(event):\n",
@@ -68,7 +68,6 @@
     "    touchphat.led_off(\"Back\")\n",
     "    \n",
     "    dispense=False\n",
-    "    manual_mode=False\n",
     "\n",
     "@touchphat.on_release(\"Back\")\n",
     "def stop_release(event):\n",
@@ -119,7 +118,6 @@
     "    global manual_mode\n",
     "    manual_mode=True\n",
     "    \n",
-    "    #target_weight=100\n",
     "    time.sleep(0.1)\n",
     "    touchphat.led_on(\"C\")\n",
     "    touchphat.led_off(\"A\")\n",
@@ -317,7 +315,7 @@
     "        \n",
     "        touchphat.led_on(\"Enter\")\n",
     "        \n",
-    "        while manual_mode:\n",
+    "        while dispense:\n",
     "            \n",
     "            n_steps+=1\n",
     "            pi.set_servo_pulsewidth(GPIO_PIN, current_speeds[0])\n",
@@ -334,6 +332,7 @@
     "            time.sleep(0.1)\n",
     "\n",
     "        pi.set_servo_pulsewidth(GPIO_PIN, stop_speed)  \n",
+    "        touchphat.led_off(\"Enter\")\n",
     "            \n",
     "    elif dispense: #here we use the scale\n",
     "        \n",
@@ -393,6 +392,7 @@
     "            \n",
     "            if scale.device:\n",
     "                scale.disconnect()\n",
+    "                del scale\n",
     "            \n",
     "            dispense=False\n",
     "\n",
@@ -406,9 +406,7 @@
     "            dispense=False\n",
     "    else:\n",
     "        time.sleep(0.1)\n",
-    "        \n",
-    "        \n",
-    "        \n"
+    "        "
    ]
   },
   {
