--- a/Beans_interface.ipynb
+++ b/Beans_interface.ipynb
@@ -296,7 +296,8 @@
    "source": [
     "stop_speed=1490\n",
     "target_weight=10\n",
-    "steps_per_direction=15\n",
+    "steps_per_direction_no_weight=15\n",
+    "steps_per_direction=30\n",
     "tolerance=0.15\n",
     "current_speeds_cw=[1100,1250,1400]\n",
     "current_speeds_acw=[1800,1700,1550]\n",
@@ -320,7 +321,7 @@
     "            n_steps+=1\n",
     "            pi.set_servo_pulsewidth(GPIO_PIN, current_speeds[0])\n",
     "                \n",
-    "            if n_steps==steps_per_direction:\n",
+    "            if n_steps==steps_per_direction_no_weight:\n",
     "\n",
     "                if direction==1:\n",
     "                    current_speeds=current_speeds_acw\n",
@@ -329,6 +330,7 @@
     "\n",
     "                direction=direction*-1\n",
     "                n_steps=0\n",
+    "            \n",
     "            time.sleep(0.1)\n",
     "\n",
     "        pi.set_servo_pulsewidth(GPIO_PIN, stop_speed)  \n",
@@ -367,9 +369,9 @@
     "                        \n",
     "                    n_steps+=1\n",
     "                    \n",
-    "                    if current_weight<target_weight-2:\n",
+    "                    if current_weight<target_weight-1:\n",
     "                        pi.set_servo_pulsewidth(GPIO_PIN, current_speeds[0])\n",
-    "                    elif current_weight<=target_weight-1:\n",
+    "                    elif current_weight<=target_weight-0.5:\n",
     "                        pi.set_servo_pulsewidth(GPIO_PIN, current_speeds[1])\n",
     "                    else:\n",
     "                        pi.set_servo_pulsewidth(GPIO_PIN, current_speeds[2])\n",
@@ -405,8 +407,7 @@
     "            touchphat.led_off(\"Enter\")\n",
     "            dispense=False\n",
     "    else:\n",
-    "        time.sleep(0.1)\n",
-    "        "
+    "        time.sleep(0.1)"
    ]
   },
   {
