better speed control

--- a/Beans_interface.ipynb
+++ b/Beans_interface.ipynb
@@ -2,18 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2020-02-02 15:09:50 initInitialise: Can't lock /var/run/pigpio.pid\n",
+      "Can't initialise pigpio library\n"
+     ]
+    }
+   ],
    "source": [
     "!sudo pigpiod"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -30,7 +39,7 @@
     "\n",
     "GPIO_PIN=15\n",
     "ACAIA_MAC='00:1C:97:17:FD:97'\n",
-    "stop_speed=1490\n",
+    "stop_speed=1400\n",
     "target_weight=10\n",
     "\n",
     "sb.call('sudo pigpiod',shell=True)\n",
@@ -145,29 +154,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 49,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0L"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    " pi.set_servo_pulsewidth(GPIO_PIN, 1500)"
+    "stop_speed=1470\n",
+    "\n",
+    "fast_cw=stop_speed-500\n",
+    "mid_cw=stop_speed-200\n",
+    "slow_cw=stop_speed-30\n",
+    "\n",
+    "\n",
+    "fast_acw=stop_speed+500\n",
+    "mid_acw=stop_speed+200\n",
+    "slow_acw=stop_speed+40"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
    "metadata": {
     "collapsed": false
    },
@@ -178,13 +194,35 @@
        "0L"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pi.set_servo_pulsewidth(GPIO_PIN, 1490)"
+    " pi.set_servo_pulsewidth(GPIO_PIN, fast_cw)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0L"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pi.set_servo_pulsewidth(GPIO_PIN, 1480)"
    ]
   },
   {
@@ -294,7 +332,7 @@
     }
    ],
    "source": [
-    "stop_speed=1490\n",
+    "stop_speed=1470\n",
     "target_weight=10\n",
     "steps_per_direction_no_weight=15\n",
     "steps_per_direction=70\n",
