adjust speed on the fly

--- a/Beans_interface.ipynb
+++ b/Beans_interface.ipynb
@@ -11,13 +11,73 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2020-02-02 15:09:50 initInitialise: Can't lock /var/run/pigpio.pid\n",
-      "Can't initialise pigpio library\n"
+      "2020-02-02 15:37:56 initInitialise: Can't lock /var/run/pigpio.pid\r\n",
+      "Can't initialise pigpio library\r\n"
      ]
     }
    ],
    "source": [
     "!sudo pigpiod"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "config = {'stop_speed': 1500}\n",
+    "with open('config.json', 'w') as f:\n",
+    "    json.dump(config, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "\n",
+    "#we need this to update things on the fly\n",
+    "with open('config.json', 'r') as f:\n",
+    "    config = json.load(f)\n",
+    "    stop_speed=config['stop_speed']\n",
+    "    fast_cw=stop_speed-500\n",
+    "    mid_cw=stop_speed-200\n",
+    "    slow_cw=stop_speed-30\n",
+    "\n",
+    "    fast_acw=stop_speed+500\n",
+    "    mid_acw=stop_speed+200\n",
+    "    slow_acw=stop_speed+40\n",
+    "    \n",
+    "    current_speeds_cw=[fast_cw,mid_cw,slow_cw]\n",
+    "    current_speeds_acw=[fast_acw,mid_acw,slow_acw]\n",
+    "    current_speeds=current_speeds_cw"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "beans_autodoser.py     LICENSE\t  this_goes_in_etc_rc.local\r\n",
+      "Beans_interface.ipynb  README.md\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!echo settings.json"
    ]
   },
   {
@@ -154,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -165,7 +225,6 @@
     "fast_cw=stop_speed-500\n",
     "mid_cw=stop_speed-200\n",
     "slow_cw=stop_speed-30\n",
-    "\n",
     "\n",
     "fast_acw=stop_speed+500\n",
     "mid_acw=stop_speed+200\n",
@@ -179,33 +238,13 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0L"
-      ]
-     },
-     "execution_count": 52,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    " pi.set_servo_pulsewidth(GPIO_PIN, fast_cw)"
+    "pi.set"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -216,13 +255,49 @@
        "0L"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pi.set_servo_pulsewidth(GPIO_PIN, 1480)"
+    " pi.set_servo_pulsewidth(GPIO_PIN, slow_cw)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0L"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Back\n",
+      "release stop\n",
+      "Back\n",
+      "release stop\n",
+      "Back\n",
+      "release stop\n",
+      "Back\n",
+      "release stop\n"
+     ]
+    }
+   ],
+   "source": [
+    "pi.set_servo_pulsewidth(GPIO_PIN, 1500)"
    ]
   },
   {
