--- a/Beans_interface.ipynb
+++ b/Beans_interface.ipynb
@@ -22,6 +22,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "0\n",
+      "1\n",
+      "2\n",
+      "0\n",
+      "1\n",
+      "2\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(10):\n",
+    "    print i%3"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 15,
    "metadata": {
     "collapsed": true
